feat: add submit and resubmit template feature
