# backend/src/main/java/com/lewisrp/basemessages/backend/adapter/persistence/entity/TemplateEntity.java
@@ -36,6 +36,8 @@ public class TemplateEntity {
 
     private String rejectionReason;
 
+    private String metaError;
+
     private LocalDateTime createdAt;
 
     private LocalDateTime updatedAt;
